# PlasmaPrefix

./: CMakeLists.txt  LICENSE  appveyor.yml  curl.cmake  expat.cmake  libjpeg-turbo.cmake  libpng.cmake  nasm.cmake  ogg.cmake  openssl.cmake  opus.cmake  patch.cmake  perl.cmake  speex.cmake  string_theory.cmake  vorbis.cmake  zlib.cmake
.github/workflows/: windows-ci.yml
patches/openssl/: msvc-runtime.patch
patches/speex/: remove-nonexistent-projects.patch
